--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,38 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+.home-container {
+  background-image: url('./images/bannerbackground1.png');
+  width: 1364px;
+  height: 556px;
+  /* background-repeat: no-repeat;
+  overflow: hidden; */
+}
+
+.home-title {
+  padding-top: 140px;
+  text-align: center;
+  font-size: 50px;
+}
+
+.home-search-section {
+  text-align: center;
+}
+
+.home-search-section input {
+  margin-top: 20px;
+  padding: 10px;
+  width: 400px;
+  font-size: 18px;
+  border: none;
+  border-radius: 50px;
+  position: relative;
 }
